gtk+3.0 (3.22.20-2) UNRELEASED; urgency=medium

  * Bump to debhelper compat 10.
    + Drop dh-autoreconf and autotools-dev build-deps, no longer needed as
      debhelper guarantees them now.
  * Switch from CDBS to dh.
    Only regression is that we don't run --fail-missing on arch:all builds.
  * Don't build the docs when not building the -doc packages. Saves some
    time on arch-only builds.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 09 Sep 2017 15:13:57 +0200

gtk+3.0 (3.22.20-1) unstable; urgency=medium

  * New upstream release.
  * debian/patches/fix-gtk-menu-sliders.patch:
    + Removed, applied upstream.
  * Bump Standards-Version to 4.1.0; no changes needed.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 09 Sep 2017 15:11:12 +0200

gtk+3.0 (3.22.19-1) unstable; urgency=medium

  [ Jeremy Bicha ]
  * New upstream release
  * debian/libgtk-3-common.install.in:
    Install EmojiChooser gsettings schemas
  * Add fix-gtk-menu-sliders.patch:
    - Cherry-pick patch to fix regression with clicking on sliders in menus,
      such as with Unity's sound indicator (LP: #1712701) (Closes: #872687)

  [ Ken VanDine ]
  * debian/control.in:
    - Bump libpango1.0-dev Build-Depends to >= 1.40.5 for colornames test

 -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 28 Aug 2017 20:39:28 -0400

gtk+3.0 (3.22.18-1) unstable; urgency=medium

  * Hi from Debconf
  * New upstream release!
    + Support entering emoji by name, using Ctrl-Shift-E (note there is a
      whitelist for this currently - see GtkImContext docs)
    + Wayland:
     - Add support for the shortcut inhibitor protocol
     - Support Wacome tablet wheel scrolling
  * debian/control{,.in}: Bump wayland-protocols to 1.9, per upstream.

 -- Iain Lane <laney@debian.org>  Thu, 10 Aug 2017 16:34:47 +0100

gtk+3.0 (3.22.17-1) unstable; urgency=medium

  * New upstream release.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Wed, 26 Jul 2017 18:59:22 +0200

gtk+3.0 (3.22.16-1) unstable; urgency=medium
