@@ -7,6 +7,8 @@ gtk+3.0 (3.22.20-2) UNRELEASED; urgency=medium
     Only regression is that we don't run --fail-missing on arch:all builds.
   * Don't build the docs when not building the -doc packages. Saves some
     time on arch-only builds.
+  * Skip the udeb build when not building the -udeb package. Saves a lot
+    of time on the arch:all builds.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 09 Sep 2017 15:13:57 +0200
 
